transferring css into scss

--- a/css/screen.css
+++ b/css/screen.css
@@ -1,479 +1,465 @@
 /* Add your CSS below */
 
 /* Example: adding a background color to the HTML body */
-html 
-{ 
-	background: url("../images/cityscape.jpeg") no-repeat center center fixed; 
-  	background-color: #934B8A;
-	background-blend-mode: luminosity;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
+html {
+  background: url("../images/cityscape.jpeg") no-repeat center center fixed;
+  background-color: #934b8a;
+  background-blend-mode: luminosity;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
-img
-{
-	border-radius: 20px;
-	padding: 2px 4px;	
+
+img {
+  border-radius: 20px;
+  padding: 2px 4px;
 }
-.h3a
-{
-	color: red;
-	font-family: 'Alegreya Sans SC', sans-serif;
-	font-size: 3vw;
-	mix-blend-mode: color-dodge;
-	padding: 0;
-	margin: 0;
+
+.h3a {
+  color: red;
+  font-family: 'Alegreya Sans SC', sans-serif;
+  font-size: 3vw;
+  mix-blend-mode: color-dodge;
+  padding: 0;
+  margin: 0;
 }
-.h3b
-{
-	color: #E9E745;
-	font-family: 'Alegreya Sans SC', sans-serif;
-	font-size: 3vw;
-	mix-blend-mode: color-dodge;
-	padding: 0;
-	margin: 0;
+
+.h3b {
+  color: #e9e745;
+  font-family: 'Alegreya Sans SC', sans-serif;
+  font-size: 3vw;
+  mix-blend-mode: color-dodge;
+  padding: 0;
+  margin: 0;
 }
-.h3c
-{
-	color: #F3FEF1;
-	font-family: 'Alegreya Sans SC', sans-serif;
-	font-size: 3vw;
-	mix-blend-mode: color-dodge;
-	padding: 0;
-	margin: 0;
+
+.h3c {
+  color: #f3fef1;
+  font-family: 'Alegreya Sans SC', sans-serif;
+  font-size: 3vw;
+  mix-blend-mode: color-dodge;
+  padding: 0;
+  margin: 0;
 }
-.nameimg
-{
-	padding: 15px;
-    border-radius: 50%;
-	height: auto;
-	max-width: 45px;
+
+.nameimg {
+  padding: 15px;
+  border-radius: 50%;
+  height: auto;
+  max-width: 45px;
 }
-.namecard
-{
-	margin-left: 30px;
-	box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
-	border-radius: 20px;
-	background-color: #F2F69F;
-	text-align: center;
+
+.namecard {
+  margin-left: 30px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 20px;
+  background-color: #f2f69f;
+  text-align: center;
 }
-.namecontent
-{
-	margin-bottom: 8px;
-	padding: 0 16px 0 16px;
+
+.namecontent {
+  margin-bottom: 8px;
+  padding: 0 16px;
 }
-ul.navigation
-{
-	text-align: center;
-	border-bottom: 2px solid black;
-	font-family: Georgia,"Trebuchet MS",Arial,sans-serif;
-	background-color: #DADA5F;
+
+ul.navigation {
+  text-align: center;
+  border-bottom: 2px solid black;
+  font-family: Georgia, "Trebuchet MS", Arial, sans-serif;
+  background-color: #dada5f;
 }
-ul.a
-{
-	list-style: none;
-	border-left: 6px solid red;
-    padding: 5px;
-    margin-left: 35px;
-	font-family: Arial,Georgia,"Trebuchet MS",sans-serif;
+
+ul.a {
+  list-style: none;
+  border-left: 6px solid red;
+  padding: 5px;
+  margin-left: 35px;
+  font-family: Arial, Georgia, "Trebuchet MS", sans-serif;
 }
-ul.b
-{
-	list-style: none;
-	border-left: 6px solid green;
-    padding: 5px;
-    margin-left: 35px;
-	font-family: Arial,Georgia,"Trebuchet MS",sans-serif;
+
+ul.b {
+  list-style: none;
+  border-left: 6px solid green;
+  padding: 5px;
+  margin-left: 35px;
+  font-family: Arial, Georgia, "Trebuchet MS", sans-serif;
 }
-ul.c
-{
-	list-style: none;
-	border-left: 6px solid yellow;
-    padding: 5px;
-    margin-left: 35px;
-	font-family: Arial,Georgia,"Trebuchet MS",sans-serif;
+
+ul.c {
+  list-style: none;
+  border-left: 6px solid yellow;
+  padding: 5px;
+  margin-left: 35px;
+  font-family: Arial, Georgia, "Trebuchet MS", sans-serif;
 }
-ul.d
-{
-	list-style: none;
-	border-left: 6px solid blue;
-    padding: 5px;
-    margin-left: 35px;
-	font-family: Arial,Georgia,"Trebuchet MS",sans-serif;
+
+ul.d {
+  list-style: none;
+  border-left: 6px solid blue;
+  padding: 5px;
+  margin-left: 35px;
+  font-family: Arial, Georgia, "Trebuchet MS", sans-serif;
 }
-li.a
-{
-    display: inline;
+
+li.a {
+  display: inline;
 }
-li.second
-{
-	text-align: left-justify;
-	list-style: none;
-	font-size: 150%;
-	font-weight: bold;
+
+li.second {
+  text-align: left-justify;
+  list-style: none;
+  font-size: 150%;
+  font-weight: bold;
 }
-a:link
-{
-	color: blue;
-	padding: 2px 4px;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	font-weight: bold;
+
+a:link {
+  color: blue;
+  padding: 2px 4px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-weight: bold;
 }
-a:visited
-{
-	color: purple;
-	padding: 2px 4px;
-	text-decoration: none;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	font-weight: lighter;
+
+a:visited {
+  color: purple;
+  padding: 2px 4px;
+  text-decoration: none;
+  text-align: center;
+  display: inline-block;
+  font-weight: lighter;
 }
-a:hover, a:active
-{
-	background-color: #ADD8E6;
-	padding: 2px 4px;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	border-radius: 20px;
+
+a:hover,
+a:active {
+  background-color: #add8e6;
+  padding: 2px 4px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 20px;
 }
-a.current:link, a.current:visited 
-{
-	color: white;
-	background-color: blue;
+
+a.current:link,
+a.current:visited {
+  color: white;
+  background-color: blue;
 }
-.my-div1
-{
-	border-radius: 20px;
-    background-color: #F95133;
-	background: url("../images/office.jpg") no-repeat center center; 
-  	background-color: #91CC97;
-	background-blend-mode: multiply;
-	background-size: 130%;
+
+.my-div1 {
+  border-radius: 20px;
+  background: url("../images/office.jpg") no-repeat center center;
+  background-color: #91cc97;
+  background-blend-mode: multiply;
+  background-size: 130%;
 }
-.my-div2
-{
-	border-radius: 20px;
-    background-color: #F95133;
-	background: url("../images/laptop.jpg") no-repeat center center; 
-  	background-color: #525FCA;
-	background-blend-mode: multiply;
-	background-size: 110%;
+
+.my-div2 {
+  border-radius: 20px;
+  background: url("../images/laptop.jpg") no-repeat center center;
+  background-color: #525fca;
+  background-blend-mode: multiply;
+  background-size: 110%;
 }
-.my-div3
-{
-	border-radius: 20px;
-    background-color: #F95133;
-	background: url("../images/social media.jpeg") no-repeat center center; 
-	background-blend-mode: multiply;
-	background-size: 110%;
+
+.my-div3 {
+  border-radius: 20px;
+  background: url("../images/social media.jpeg") no-repeat center center;
+  background-blend-mode: multiply;
+  background-size: 110%;
 }
-.my-div4
-{
-	border-radius: 20px;
-	background: url("../images/work.jpg") no-repeat center center;
-	background-color: #BDDB85;	
-	background-blend-mode: lighten;
-	background-size: 100%;
-	background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+
+.my-div4 {
+  border-radius: 20px;
+  background: url("../images/work.jpg") no-repeat center center;
+  background-color: #bddb85;
+  background-blend-mode: lighten;
+  background-size: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-.my-div5
-{
-	border-radius: 20px;
-	background: url("../images/projects.jpg") no-repeat center center;
-	background-color: #BDDB85;	
-	background-blend-mode: screen;
-	background-size: 100%;
-	background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+
+.my-div5 {
+  border-radius: 20px;
+  background: url("../images/projects.jpg") no-repeat center center;
+  background-color: #bddb85;
+  background-blend-mode: screen;
+  background-size: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-.my-div6
-{
-	border-radius: 20px;
-	background: url("../images/media.jpeg") no-repeat center center;
-	background-color: #BDDB85;	
-	background-blend-mode: screen;
-	background-size: 100%;
-	background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+
+.my-div6 {
+  border-radius: 20px;
+  background: url("../images/media.jpeg") no-repeat center center;
+  background-color: #bddb85;
+  background-blend-mode: screen;
+  background-size: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-a.fill-div
-{
-    display: block;
-    text-decoration: none;
-	color: black;
+
+a.fill-div {
+  display: block;
+  text-decoration: none;
+  color: black;
 }
+
 @import "compass/css3";
 
-.wrapper 
-{
-	display: -webkit-box;
-	display: -moz-box;
-	display: -ms-flexbox;
-	display: -webkit-flex;
-	display: flex;  
-  
-	-webkit-flex-flow: column wrap;
-	flex-flow: column wrap;
-  
-	font-weight: bold;
-	text-align: center;
+.wrapper {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: column wrap;
+  flex-flow: column wrap;
+  font-weight: bold;
+  text-align: center;
 }
 
-.wrapper > * 
-{
-	padding: 10px;
-	flex: 1 100%;
+.wrapper > * {
+  padding: 10px;
+  flex: 1 100%;
 }
 
-.header 
-{
-	display: center;
-	justify-content: center;
+.header {
+  display: center;
+  justify-content: center;
 }
 
-.footer 
-{
-	background-image: url("../images/footer.jpeg");
-	border-radius: 60px;
-	background-size: 90%;
-	margin: 0 auto;
-	max-width: 30%;
-	background-repeat:no-repeat;
-	background-attachment: fixed;
-	display: center;
-	justify-content: flex-end;
-	text-align: center;
-	color: black;
-	font-size: auto;
+.footer {
+  background-image: url("../images/footer.jpeg");
+  border-radius: 60px;
+  background-size: 90%;
+  margin: 0 auto;
+  max-width: 30%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  display: center;
+  justify-content: flex-end;
+  text-align: center;
+  color: black;
+  font-size: auto;
 }
 
-.flex-container 
-{
-	padding: 0;
-	margin: 0;
-	list-style: none;
-  
-	display: -webkit-box;
-	display: -moz-box;
-	display: -ms-flexbox;
-	display: -webkit-flex;
-	display: flex;
-  
-	-webkit-flex-flow: row wrap;
-	justify-content: center;
-	align-items: center;
+.flex-container {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
 }
 
-.flex-item 
-{
-	padding: 5px;
-	width: 100%;
-	height: auto;
-	margin-top: 10px;
-	text-align: center;
-	flex-shrink: <1>;
-	flex-grow: <1>;
-	flex-direction: column;
+.flex-item {
+  padding: 5px;
+  width: 100%;
+  height: auto;
+  margin-top: 10px;
+  text-align: center;
+  flex-shrink: <1>;
+  flex-grow: <1>;
+  flex-direction: column;
 }
 
-.flex-itemsub
-{
-	padding: 5px;
-	width: 100%;
-	height: auto;
-	font-size: 700%
-	margin-top: 10px;
-	text-align: center;
-	flex-shrink: <1>;
-	flex-grow: <1>;
-	flex-direction: column;
+.flex-itemsub {
+  padding: 5px;
+  width: 100%;
+  height: auto;
+  font-size: 700%;
+  margin-top: 10px;
+  text-align: center;
+  flex-shrink: <1>;
+  flex-grow: <1>;
+  flex-direction: column;
 }
 
-@media (max-width: 320px) 
-{
-	img
-	{
-		border-radius: 20px;
-		padding: 2px 4px;
-		width: 100%;
-		height: auto;
-	}
-	.nameimg
-	{
-		padding: 3px;
-	}
-	.namecard
-	{
-		margin: auto;
-	}
-	.flex-container, .flex-item, .flex-itemsub
-	{
-		display: block;
-		width: auto;
-		float: center;
-		.col 
-		{
-			width: 100%;
-			margin: 0 0 10px 0;
-		}
-	}
-	.footer
-	{
-		background-color: gray;
-		color: red;
-		max-width: auto;
-		font-size: 30%;
-	}
+@media (max-width: 320px) {
+  img {
+    border-radius: 20px;
+    padding: 2px 4px;
+    width: 100%;
+    height: auto;
+  }
+
+  .nameimg {
+    padding: 3px;
+  }
+
+  .namecard {
+    margin: auto;
+  }
+
+  .flex-container,
+  .flex-item,
+  .flex-itemsub {
+    display: block;
+    width: auto;
+    float: center;
+  }
+
+  .col {
+    width: 100%;
+    margin: 0 0 10px;
+  }
+
+  .footer {
+    background-color: gray;
+    color: red;
+    max-width: auto;
+    font-size: 30%;
+  }
 }
-@media (max-width: 500px) 
-{
-	img
-	{
-		border-radius: 20px;
-		padding: 2px 4px;
-		width: 200%;
-		height: auto;
-	}
-	.nameimg
-	{
-		padding: 3px;
-	}
-	.namecard
-	{
-		margin: auto;
-	}
-	.flex-container, .flex-item, .flex-itemsub
-	{
-		display: block;
-		width: auto;
-		float: center;
-		.col 
-		{
-			width: 100%;
-			margin: 0 0 10px 0;
-		}
-	}
-	.footer
-	{
-		background-color: gray;
-		color: yellow;
-		max-width: auto;
-		font-size: 30%;
-	}
+
+@media (max-width: 500px) {
+  img {
+    border-radius: 20px;
+    padding: 2px 4px;
+    width: 200%;
+    height: auto;
+  }
+
+  .nameimg {
+    padding: 3px;
+  }
+
+  .namecard {
+    margin: auto;
+  }
+
+  .flex-container,
+  .flex-item,
+  .flex-itemsub {
+    display: block;
+    width: auto;
+    float: center;
+  }
+
+  .col {
+    width: 100%;
+    margin: 0 0 10px;
+  }
+
+  .footer {
+    background-color: gray;
+    color: yellow;
+    max-width: auto;
+    font-size: 30%;
+  }
 }
-@media (max-width: 1000px)
-{
-	img
-	{
-		border-radius: 20px;
-		padding: 2px 4px;
-		width: 100%;
-		height: auto;
-	}
-	.nameimg
-	{
-		padding: 3px;
-	}
-	.namecard
-	{
-		margin: auto;
-	}
-	.flex-container, .flex-item, .flex-itemsub
-	{
-		display: block;
-		width: auto;
-		float: center;
-		.col 
-		{
-			width: 100%;
-			margin: 0 0 10px 0;
-		}
-	}
-	.footer
-	{
-		background-color: gray;
-		color: white;
-		max-width: auto;
-		font-size: 50%;
-	}
+
+@media (max-width: 1000px) {
+  img {
+    border-radius: 20px;
+    padding: 2px 4px;
+    width: 100%;
+    height: auto;
+  }
+
+  .nameimg {
+    padding: 3px;
+  }
+
+  .namecard {
+    margin: auto;
+  }
+
+  .flex-container,
+  .flex-item,
+  .flex-itemsub {
+    display: block;
+    width: auto;
+    float: center;
+  }
+
+  .col {
+    width: 100%;
+    margin: 0 0 10px;
+  }
+
+  .footer {
+    background-color: gray;
+    color: white;
+    max-width: auto;
+    font-size: 50%;
+  }
 }
 
 /* js stuff */
-.popup 
-{
-    position: relative;
-    display: inline-block;
-    cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+.popup {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 /* The actual popup */
-.popup .popuptext 
-{
-    visibility: hidden;
-    width: 160px;
-    background-color: #555;
-    color: #fff;
-    text-align: center;
-    border-radius: 6px;
-    padding: 8px 0;
-    position: absolute;
-    z-index: 1;
-    bottom: 125%;
-    left: 50%;
-    margin-left: -80px;
+.popup .popuptext {
+  visibility: hidden;
+  width: 160px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -80px;
 }
 
 /* Popup arrow */
-.popup .popuptext::after 
-{
-    content: "";
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: #555 transparent transparent transparent;
+.popup .popuptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent;
 }
 
 /* Toggle this class - hide and show the popup */
-.popup .show 
-{
-    visibility: visible;
-    -webkit-animation: fadeIn 1s;
-    animation: fadeIn 1s;
+.popup .show {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
 }
 
 /* Add animation (fade in the popup) */
-@-webkit-keyframes fadeIn 
-{
-    from {opacity: 0;} 
-    to {opacity: 1;}
+@-webkit-keyframes fadeIn {
+  from { opacity: 0; }
+
+  to { opacity: 1; }
 }
 
-@keyframes fadeIn 
-{
-    from {opacity: 0;}
-    to {opacity:1 ;}
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
 }
-table, th, td 
-{
-	margin: 0 auto;
-    border: 1px solid black;
+
+table,
+th,
+td {
+  margin: 0 auto;
+  border: 1px solid black;
 }
