fixed some of the smaller issues with the text

--- a/source/scss/_variables.scss
+++ b/source/scss/_variables.scss
@@ -29,6 +29,7 @@ $fontsize-text: 3vw;
 $mixblend-text: color-dodge;
 $padding-text: 0;
 $margin-text: 0;
+$textshadow-text: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
 
 //namecard
 $height-nameimg: auto;
